# whetstone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
builder_agent/: budget.py  clarify.py  cli.py  config.py  embedders.py  generate.py  integrate.py  llm.py  memory.py  orchestrate.py  plan.py  safety.py  sandbox.py  schemas.py  verify.py
builder_agent/tests/: test_cli.py  test_config.py  test_history.py  test_integrate.py  test_js_ts_support.py  test_safety.py  test_verify.py
builder_agent/web/: history.py
docs/: examples.md  getting_started.md  index.md  tutorials.md
docs/api/: budget.md  clarify.md  cli.md  config.md  embedders.md  generate.md  index.md  integrate.md  llm.md  memory.md  orchestrate.md  plan.md  sandbox.md  schemas.md  verify.md
